--- a/app/src/main/res/layout/item_dose.xml
+++ b/app/src/main/res/layout/item_dose.xml
@@ -21,12 +21,10 @@
         android:id="@+id/textViewDoseData"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="@+id/textViewDoseNome"
-        app:layout_constraintStart_toEndOf="@+id/textViewDoseNome"
+        app:layout_constraintStart_toStartOf="@+id/textView12"
         app:layout_constraintTop_toTopOf="@+id/textViewDoseNome"
         tools:text="20/06/2021" />
 
@@ -87,10 +85,12 @@
         android:id="@+id/textView12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
         android:layout_marginTop="16dp"
         android:text="@string/enfermeiro_itemDose"
         android:textColor="@color/cor_destaque"
-        app:layout_constraintStart_toStartOf="@+id/textViewDoseData"
+        app:layout_constraintStart_toEndOf="@+id/textView11"
         app:layout_constraintTop_toBottomOf="@+id/textViewDoseData" />
 
     <TextView
