--- a/app/src/main/res/layout/fragment_edita_pessoa.xml
+++ b/app/src/main/res/layout/fragment_edita_pessoa.xml
@@ -49,7 +49,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/margem_campos"
                         android:hint="@string/campo_cc"
-                        android:inputType="textLongMessage" />
+                        android:inputType="number" />
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:layout_width="match_parent"
@@ -61,7 +61,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/margem_campos"
                             android:hint="@string/contacto"
-                            android:inputType="textLongMessage" />
+                            android:inputType="phone" />
                     </com.google.android.material.textfield.TextInputLayout>
                 </com.google.android.material.textfield.TextInputLayout>
 
