--- a/app/src/main/res/layout/fragment_edita_vacina.xml
+++ b/app/src/main/res/layout/fragment_edita_vacina.xml
@@ -25,7 +25,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margem_campos"
                 android:hint="@string/quantidade"
-                android:inputType="textLongMessage" />
+                android:inputType="number" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -39,7 +39,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margem_campos"
                 android:hint="@string/data"
-                android:inputType="phone" />
+                android:inputType="number" />
         </com.google.android.material.textfield.TextInputLayout>
 
 
