--- a/app/src/main/res/layout/fragment_nova_vacina.xml
+++ b/app/src/main/res/layout/fragment_nova_vacina.xml
@@ -25,7 +25,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margem_campos"
                 android:hint="@string/quantidade"
-                android:inputType="textLongMessage" />
+                android:inputType="number" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -37,7 +37,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margem_campos"
-                android:hint="@string/data" />
+                android:hint="@string/data"
+                android:inputType="number" />
 
 
         </com.google.android.material.textfield.TextInputLayout>
