Acabadas as validações e alterar icon da barra lateral

--- a/app/src/main/res/layout/item_pessoas.xml
+++ b/app/src/main/res/layout/item_pessoas.xml
@@ -21,12 +21,12 @@
 
     <TextView
         android:id="@+id/textViewPessoaNascimento"
-        android:layout_width="94dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginEnd="5dp"
-        android:layout_marginRight="5dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="@color/black"
         app:layout_constraintEnd_toStartOf="@+id/textViewPessoaContacto"
@@ -38,14 +38,11 @@
         android:id="@+id/textViewPessoaContacto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textViewPessoaNascimento"
         app:layout_constraintTop_toTopOf="@+id/textViewPessoaNascimento"
         tools:text="915710186" />
 
