--- a/app/src/main/res/layout/fragment_edita_pessoa.xml
+++ b/app/src/main/res/layout/fragment_edita_pessoa.xml
@@ -24,7 +24,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margem_campos"
-                android:hint="@string/contacto"
+                android:hint="@string/data"
                 android:inputType="phone" />
 
             <com.google.android.material.textfield.TextInputLayout
